<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">HealthApp</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Scanning Devices</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="home_menu"> Home </string>
    <string name="sleep_menu"> Sleep</string>
    <string name="activity_menu"> Activity </string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_mi_band_pairing">MiBandPairingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dispositivi_trovati">Dispositivi trovati</string>


    <!-- Mad project  -->

    <string name="navigation_drawer_open">Apri barra navigazione</string>
    <string name="navigation_drawer_close">Chiudi barra navigazione</string>
    <string name="nav_header_title">Nome Utente</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="EditAct">Modifica</string>
    <string name="edit">Modifica</string>
    <string name="name">Inserire Nome</string>
    <string name="name_hint">Nome</string>
    <string name="surname_hint">Cognome</string>
    <string name="mail_hint">Mail</string>
    <string name="profileAct">Profilo Utente</string>
    <string name="description_hint">Descrizione</string>
    <string name="descriptionf">Descriptione: </string>
    <string name="mailf">Mail</string>
    <string name="namef">Nome</string>
    <string name="adress">indirizzo</string>
    <string name="addressedit">Indirizzo</string>
    <string name="gal_camera_chooser">Foto Profilo</string>
    <string name="camera">Fotocamera</string>
    <string name="gallery">Galleria</string>
    <string name="alert_storage">Per poter cambiare l`immagine del profilo è necessario fornire l autorizzazione di Archiviazione:
        \nVai a Impostazioni %1$s -> Autorizzazioni \ned abilitala </string>
    <string name="go">Vai</string>
    <string name="refuse">Rifiuta</string>
    <string name="phone">Telefono</string>
    <string name="login_id_hint">Inserisci l`ID del tuo utente</string>
    <string name="login_btn">Entra</string>
    <string name="newcust_btn">Nuovo Utente</string>
    <string name="search">Ristoranti</string>
    <string name="priceh">Prezzo:</string>
    <string name="lunch">Pranzo</string>
    <string name="dinner">Cena</string>
    <string name="closed">chiuso</string>
    <string name="cart">Carrello</string>
    <string name="quantity">Quantità</string>
    <string name="price">Prezzo</string>
    <string name="order">Effettua l\'ordine</string>
    <string name="order_notes">Scrivi qui le tue note per l\'ordine...</string>
    <string name="ordered">Ordine effettuato con successo! Grazie</string>
    <string name="noOrdered">Quantità inserite non disponibili! Riprova</string>
    <string name="notAvailable">N. D.</string>
    <string name="auth_failed">Registrazione fallita</string>
    <string name="login_failed">Login fallito</string>
    <string name="dob_hint">Descrizione</string>
    <string name="customerInfoAct">Reservations</string>
    <string name="time">Ora</string>
    <string name="dish_list">Lista piatti ordinati (</string>
    <string name="notes">Note</string>
    <string name="completed_ord">completed_ord</string>
    <string name="n_dishes_txt"># piatti: </string>
    <string name="reservations">Prenotazioni</string>
    <string name="close">Chiuso</string>
    <string name="open">Aperto</string>
    <string name="searchname">Cerca per nome</string>
    <string name="seleziona_i_tag_che_ti_interessano">Seleziona Categoria</string>
    <string name="dishes">Piatti</string>
    <string name="riepilogo">Riepilogo ordine</string>
    <string name="remember_me">Ricorda credenziali?</string>
    <string name="don_t_have_an_account">Non hai un account?</string>
    <string name="done_btn">Fatto</string>
    <string name="insert_restaurant_address">Inserire indirizzo Cliente</string>
    <string name="logout">Logout</string>
    <string name="text_opinion">Lascia un commento: (opzionale)</string>
    <string name="dialog_title">Lascia un feedback!</string>
    <string name="dialog_subtitle">Vorremmo conoscere la tua opionione:\n\nLasci una valutazione alla nostra app?\n</string>
    <string name="comment">Scrivi un commento</string>
    <string name="dialog_subtitle_2">Vorremmo conoscere la tua opionione:\n\nLascia una valutazione a questo piatto!</string>
    <string name="dialog_subtitle_3">Valutazione ristorante:\n</string>
    <string name="dialog_title_2">Cosa ne pensi di questo ordine?</string>
    <string name="reviews">Recensioni</string>
    <string name="rating_ok">Vota</string>
    <string name="rating_no">No</string>
    <string name="rating_remind">Ricordamelo</string>
    <string name="remember_choice">Non chiedere più</string>
    <string name="rating_hint">Rating</string>
    <string name="notification_plate_body">Valuta il tuo ultimo ordine!</string>
    <string name="dialog_title_3">Recensione Ristorante</string>
    <string name="not_allowed">Non hai mai prenotato in questo ristorante!</string>
    <string name="allowed">Recensione andata a buon fine, grazie!</string>
    <string name="comment_review">Recensione del piatto</string>
    <string name="ok_review">Recensione</string>
    <string name="ristorante">Ristorante</string>
    <string name="toast_ok">Indirizzo modificato correttamente!</string>
    <string name="toast_no">Non è stato trovato nessun indirizzo, inserirlo manualmente</string>
    <string name="preparing">In preparazione...</string>
    <string name="delivered">Consegnato</string>
    <string name="ready">Pronto!</string>
    <string name="profile">Profilo</string>
    <string name="dishenjoy">Ti è piaciuto questo piatto?</string>
    <string name="give_us_your_rating">Dicci cosa ne pensi!</string>

    <string name="login_email_shared">com.example.myapp.PREFERENCE_FILE_KEY</string>
    <string name="email_login_shared">com.example.myapp.PREFERENCE_FILE_KEY_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deviceName">Device Name</string>
    <string name="deviceAddress">Device Address</string>
    <string name="steps"> Steps </string>
    <string name="distance"> Distance </string>
    <string name="calories"> Calories </string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <!-- <string name="facebook_application_id" translatable="false">healthapp2022_fb</string>
     <string name="facebook_login_protocol_scheme" translatable="false">fbhealthapp2022_fb</string> -->
</resources>
