<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iconBackground"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/cust_email"

        android:layout_width="250dp"
        android:layout_height="0dp"
        android:background="@color/layout"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/usr_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/usr_img"
        app:layout_constraintTop_toTopOf="@+id/usr_img" />

    <EditText
        android:id="@+id/rest_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/layout"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/cust_email"
        app:layout_constraintStart_toEndOf="@+id/usr_img"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/login"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/rest_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/rest_password" />


    <Button
        android:id="@+id/newcust_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/layoutPrimary"
        android:text="@string/newcust_btn"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <ImageView
        android:id="@+id/usr_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/cust_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_person" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/usr_img"
        app:layout_constraintTop_toBottomOf="@+id/usr_img"
        app:srcCompat="@drawable/ic_lock_black_24dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/layout"
        android:text="@string/remember_me"
        android:buttonTint="@color/layout"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/layout"
        android:layout_marginTop="32dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>