<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="376dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

            <TextView
                android:id="@+id/steps_title"
                android:layout_width="92dp"
                android:layout_height="48dp"
                android:background="@drawable/border_background"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/steps"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/distance_title"
                app:layout_constraintEnd_toStartOf="@+id/distance_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/distance_title" />

            <TextView
                android:id="@+id/distance_title"
                android:layout_width="105dp"
                android:layout_height="48dp"
                android:background="@drawable/border_background"
                android:ems="10"
                android:gravity="center"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/calories_title"
                app:layout_constraintEnd_toStartOf="@+id/calories_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/steps_title"
                app:layout_constraintTop_toTopOf="@+id/calories_title" />

            <TextView
                android:id="@+id/calories_title"
                android:layout_width="102dp"
                android:layout_height="48dp"
                android:background="@drawable/border_background"
                android:ems="10"
                android:gravity="center"
                android:text="@string/calories"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/distance_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calories_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/calories_title"
                app:layout_constraintStart_toStartOf="@+id/calories_title"
                app:layout_constraintTop_toBottomOf="@+id/calories_title" />

            <TextView
                android:id="@+id/steps_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/distance_count"
                app:layout_constraintEnd_toEndOf="@+id/steps_title"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="@+id/steps_title"
                app:layout_constraintTop_toBottomOf="@+id/steps_title" />

            <TextView
                android:id="@+id/distance_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/calories_count"
                app:layout_constraintEnd_toEndOf="@+id/distance_title"
                app:layout_constraintStart_toStartOf="@+id/distance_title"
                app:layout_constraintTop_toBottomOf="@+id/distance_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>